--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: 1s;
+}
+.ex-1-square:hover{
+    background-color: red;
 }
 .ex-2-square {
     width: 100px;
