--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,29 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
+}
+.ex-2-square:active{
+    width: 300px;
 }
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
+}
+.ex-3-square:hover{
+    border-radius: 50%;
 }
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
+}
+.ex-4-square:hover{
+    /* display: none; */
+    opacity: 0;
 }
 .ex-5-square {
     margin: 20px;
