--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,34 @@
     width: 60px;
     height: 60px;
     background: red;
+    transition: 2s;
+}
+.ex-5-square:hover{
+    width: 90px;
+    height: 90px;
+}
+.ex-5-square:active{
+    width: 30px;
+    height: 30px;
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
-
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+.ex-7-img{
+    transition: 1s;
+}
+.ex-7-img:hover{
+    filter: contrast(10);
+    filter: saturate(8);
+}
+.ex-8-img{
+    /* filter: invert(100%); */
+    filter: contrast(200%);
+    filter: drop-shadow(8px 8px 10px grey);
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
