fatto fino a esercizio 10

--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,27 @@
 }
 .ex-8-img{
     /* filter: invert(100%); */
-    filter: contrast(200%);
-    filter: drop-shadow(8px 8px 10px grey);
+    filter: sepia(100%) drop-shadow(8px 8px 10px grey);
+    /* filter: sepia(100%);
+    filter: ; */
+    border-radius: 30%;
 }
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    filter: contrast(300%) invert(100%);
+    scale: 1.5 1.5;
 }
 .ex-10-icon {
     font-size: 60px;
+    position: relative;
+    animation-name: girotondo;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+@keyframes girotondo{
+    /* 0% {left: 0px; top: 0px;}
+    25% {left: 30px; top: 0px;} */
 }
 .ex-11-icon {
     font-size: 60px;
