--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,27 @@
 }
 .ex-11-icon {
     font-size: 60px;
+    position: relative;
+    animation-name: mezzo-giro;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes mezzo-giro{
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+}
+.ex-11-icon:hover{
+    animation-name: giro-mezzo;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes giro-mezzo{
+    0% {transform: rotate(0);}
+    25% {transform: rotate(90deg);}
+    50% {transform: rotate(180deg);}
+    75% {transform: rotate(270deg);}
 }
 .ex-12-button, .ex-13-button {
     position: relative;
