--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,16 @@
     width: 60px;
     height: 20px;
 }
+.ex-12-top-white{
+    animation-name: vado-destra;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes vado-destra{
+    /* 0% {top: 0; bottom: 0; left: 0; right: 0;} */
+    25% {top: 0; bottom: 0; right: 0; left: 100px;}
+}
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
