--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@
 }
 @keyframes vado-destra{
     /* 0% {top: 0; bottom: 0; left: 0; right: 0;} */
-    25% {top: 0; bottom: 0; right: 0; left: 100px;}
+    25% {top: -10px; bottom: 0; right: 0; left: 120px;}
 }
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
@@ -152,4 +152,13 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+.ex-12-bottom-white{
+    animation-name: vado-sinistra;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;   
+}
+@keyframes vado-sinistra{
+    25% {top: ; bottom: 0; right: 120px; left: ;}
 }
