--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@
 }
 @keyframes vado-destra{
     /* 0% {top: 0; bottom: 0; left: 0; right: 0;} */
-    25% {top: -10px; bottom: 0; right: 0; left: 120px;}
+    25% {left: 120px;}
 }
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
@@ -160,5 +160,5 @@
     animation-timing-function: linear;   
 }
 @keyframes vado-sinistra{
-    25% {top: ; bottom: 0; right: 120px; left: ;}
+    25% {right: 120px;}
 }
